# rowan-sample-env

./: .envrc  .pre-commit-config.yaml  LICENSE  README.md  basic_calculation.py  pixi.toml  pyproject.toml  test_pka.py
